--- a/about.html
+++ b/about.html
@@ -41,7 +41,6 @@
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
-                        <li><a href="lake-street.html">Lake Street</a></li>
                         <li><a href="peckham-square.html">Peckham Square</a></li>
                         <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                         <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -88,12 +87,12 @@
     <section class="about-text">
         <section class="container">
             <div class="row">
-                <h2 class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">Madison Real Estate Inc. is a full-service, family-owned real estate firm expertly representing clients in brokerage, property management, and construction.
+                <h2 class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">Madison Real Estate Inc. is a full-service, family-owned real estate firm expertly representing investors in development, management, and brokerage.
                 </h2>
             </div>
                 <div class="row">
-                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">With over 40 years of experience between its founders, Madison Real Estate Inc. has been able to perfect its strategies while providing its clients with the utmost in terms of transparency, partnership, and commitment. As we work with commercial, multi-family, and single-family real estate assets, we have harbored a broad perspective on various real estate ventures. This broad perspective lends itself to our clients, giving them a greater range of service and expertise. </p>
-                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">Moreover, as a family-owned firm, we are hyper-focused on our client relations. We know how important it is to treat clients with respect, so we pride ourselves on fostering a culture of collaboration between ourselves and our clients. Our commitment to our clients is fundamental to us and surpasses the standard of other real estate businesses.
+                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">With over 100 years of experience among its founders, Madison Real Estate Inc. has been able to perfect its strategies while providing its clients with the utmost in terms of transparency, partnership, and commitment. As we work with commercial, multi-family, and single-family real estate assets, we have harbored a broad perspective on various real estate ventures. This broad perspective lends itself to our clients, giving them a greater range of service and expertise. </p>
+                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">As a family-owned firm, we are hyper-focused on delivering the highest value and best use for all of our real estate projects. We know how important it is to treat clients with respect, so we pride ourselves on fostering a culture of collaboration between ourselves and our clients. Our commitment to our clients is fundamental to us and surpasses the standard of other real estate businesses.
                 </p>
             </div>
         </section>
@@ -191,16 +190,17 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
+                    9312 South Civic Center Drive <br>
+                    Suite 105 <br>
+                    Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                    madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -216,7 +216,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
