--- a/lake-street.html
+++ b/lake-street.html
@@ -89,7 +89,7 @@
 
         <div class="properties-slider">
             <figure class="slide">
-                <a href="img/lake-street-1.jpg"><img src="img/lake-street-1.jpg" alt=""></a>
+                <a href="img/lake-street-1.jpg"><img src="img/lake-street-1.jpg" alt="Aerial view of the unimproved lot located on Lake Street" title="Aerial view of the unimproved lot located on Lake Street"></a>
             </figure>
         </div>
     </section>
