--- a/peckham-square.html
+++ b/peckham-square.html
@@ -43,7 +43,6 @@
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
-                        <li><a href="lake-street.html">Lake Street</a></li>
                         <li><a href="peckham-square.html">Peckham Square</a></li>
                         <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                         <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -89,22 +88,22 @@
 
         <div class="properties-slider">
             <figure class="slide">
-                <a href="img/peckham-1.jpg"><img src="img/peckham-1.jpg" alt=""></a>
+                <a href="img/peckham-1.jpg"><img src="img/peckham-1.jpg" alt="Aerial view of Peckham Square" title="Aerial view of Peckham Square"></a>
             </figure>
             <figure class="slide">
-                <a href="img/peckham-2.jpg"><img src="img/peckham-2.jpg" alt=""></a>
+                <a href="img/peckham-2.jpg"><img src="img/peckham-2.jpg" alt="Wide view of Peckham Square building" title="Wide view of Peckham Square building"></a>
             </figure>
             <figure class="slide">
-                <a href="img/peckham-3.jpg"><img src="img/peckham-3.jpg" alt=""></a>
+                <a href="img/peckham-3.jpg"><img src="img/peckham-3.jpg" alt="Closer view of Peckham Square storefronts" title="Closer view of Peckham Square storefronts"></a>
             </figure>
             <figure class="slide">
-                <a href="img/peckham-4.jpg"><img src="img/peckham-4.jpg" alt=""></a>
+                <a href="img/peckham-4.jpg"><img src="img/peckham-4.jpg" alt="Angled view of storefronts" title="Angled view of storefronts"></a>
             </figure>
             <figure class="slide">
-                <a href="img/peckham-5.jpg"><img src="img/peckham-5.jpg" alt=""></a>
+                <a href="img/peckham-5.jpg"><img src="img/peckham-5.jpg" alt="Close-up view of Jo-Ann store" title="Close-up view of Jo-Ann store"></a>
             </figure>
             <figure class="slide">
-                <a href="img/peckham-6.jpg"><img src="img/peckham-6.jpg" alt=""></a>
+                <a href="img/peckham-6.jpg"><img src="img/peckham-6.jpg" alt="Close-up view of Saver's store" title="Close-up view of Saver's store"></a>
             </figure>
         </div>
     </section>
@@ -140,17 +139,17 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
 
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
+                    9312 South Civic Center Drive <br>
+                    Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                    madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -166,7 +165,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
