--- a/properties.html
+++ b/properties.html
@@ -41,7 +41,6 @@
                         <ul class="sub-menu">
                             <li><a href="biomat.html">Evans Square Biomat</a></li>
                             <li><a href="east-6th.html">East 6th Street</a></li>
-                            <li><a href="lake-street.html">Lake Street</a></li>
                             <li><a href="peckham-square.html">Peckham Square</a></li>
                             <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                             <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -90,7 +89,7 @@
             <section class="row">
                 <figure class="rev col-md-6 col-lg-4">
                     <div class="zoom">
-                        <a href="reno-regency.html"><img src="img/properties-1.jpg" alt=""></a>
+                        <a href="reno-regency.html"><img src="img/properties-1.jpg" alt="Aerial view of the Reno Regency" title="Aerial view of the Reno Regency"></a>
                     </div>
                     <figcaption>
                         <p>Reno Regency</p>
@@ -99,7 +98,7 @@
                 </figure>
                 <figure class="rev col-md-6 col-lg-4">
                     <div class="zoom">
-                        <a href="east-6th.html"><img src="img/properties-2.jpg" alt=""></a>
+                        <a href="east-6th.html"><img src="img/properties-2.jpg" alt="Street view of East 6th Street home" title="Street view of East 6th Street home"></a>
                     </div>
                     <figcaption>
                         <p>128 East 6th Street</p>
@@ -108,54 +107,44 @@
                 </figure>
                 <figure class="rev col-md-12 col-lg-4">
                     <div class="zoom">
-                        <a href="lake-street.html"><img src="img/properties-3.jpg" alt=""></a>
-                    </div>
-                    <figcaption>
-                        <p>595 North Lake Street</p>
-                        <small>Vacant lot/unimproved</small>
-                    </figcaption>
-                </figure>
-            </section>
-            <section class="row">
-                <figure class="rev col-md-6 col-lg-4">
-                    <div class="zoom">
-                        <a href="biomat.html"><img src="img/properties-4.jpg" alt=""></a>
+                        <a href="biomat.html"><img src="img/properties-4.jpg" alt="Image of Evans Square Biomat building" title="Image of Evans Square Biomat building"></a>
                     </div>
                     <figcaption>
                         <p>Evans Square Biomat</p>
                         <small>Commercial development</small>
                     </figcaption>
                 </figure>
+            </section>
+            <section class="row">
                 <figure class="rev col-md-6 col-lg-4">
                     <div class="zoom">
-                        <a href="pleasant-valley.html"><img src="img/properties-5.jpg" alt=""></a>
+                        <a href="pleasant-valley.html"><img src="img/properties-5.jpg" alt="Aerial view of Pleasant Valley Plaza" title="Aerial view of Pleasant Valley Plaza"></a>
                     </div>
                     <figcaption>
                         <p>Pleasant Valley Plaza</p>
                         <small>Commercial retail space</small>
                     </figcaption>
                 </figure>
-                <figure class="rev col-md-12 col-lg-4">
+                <figure class="rev col-md-6 col-lg-4">
                     <div class="zoom">
-                        <a href="peckham-square.html"><img src="img/properties-6.jpg" alt=""></a>
+                        <a href="peckham-square.html"><img src="img/properties-6.jpg" alt="Image of Peckham Square, outdoor shopping center" title="Image of Peckham Square, outdoor shopping center"></a>
                     </div>
                     <figcaption>
                         <p>Peckham Square</p>
                         <small>Commercial retail space</small>
                     </figcaption>
                 </figure>
-            </section>
-            <div class="row">
-                <figure class="rev col-md-6 col-lg-4">
+                <figure class="rev col-md-12 col-lg-4">
                     <div class="zoom">
-                        <a href="sunset-fuller.html"><img src="img/properties-7.jpg" alt=""></a>
+                        <a href="sunset-fuller.html"><img src="img/properties-7.jpg" alt="Street level view of Sunset Fuller Plaza" title="Street level view of Sunset Fuller Plaza"></a>
                     </div>
                     <figcaption>
                         <p>Sunset Fuller Plaza</p>
                         <small>Commercial retail space</small>
                     </figcaption>
                 </figure>
-            </div>
+            </section>
+            
         </section>
     </section>
 </main>
@@ -163,17 +152,18 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
 
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
+                    9312 South Civic Center Drive <br>
+                    Suite 105 <br>
+                    Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                   madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -189,7 +179,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
