--- a/reno-regency.html
+++ b/reno-regency.html
@@ -45,7 +45,6 @@
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
-                        <li><a href="lake-street.html">Lake Street</a></li>
                         <li><a href="peckham-square.html">Peckham Square</a></li>
                         <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                         <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -90,34 +89,34 @@
 
         <div class="properties-slider">
             <figure class="slide">
-                <a href="img/reno-regency-1.jpg"><img src="img/reno-regency-1.jpg" alt=""></a>
+                <a href="img/reno-regency-1.jpg"><img src="img/reno-regency-1.jpg" alt="Street level view of the Reno Regency" title="Street level view of the Reno Regency"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-2.jpg"><img src="img/reno-regency-2.jpg" alt=""></a>
+                <a href="img/reno-regency-2.jpg"><img src="img/reno-regency-2.jpg" alt="Aerial view of the Reno Regency" title="Aerial view of the Reno Regency"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-3.jpg"><img src="img/reno-regency-3.jpg" alt=""></a>
+                <a href="img/reno-regency-3.jpg"><img src="img/reno-regency-3.jpg" alt="Aerial view of the Reno Regency and surrounding building" title="Aerial view of the Reno Regency and surrounding building"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-4.jpg"><img src="img/reno-regency-4.jpg" alt=""></a>
+                <a href="img/reno-regency-4.jpg"><img src="img/reno-regency-4.jpg" alt="Street level view of the Reno Regency" title="Street level view of the Reno Regency"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-5.jpg"><img src="img/reno-regency-5.jpg" alt=""></a>
+                <a href="img/reno-regency-5.jpg"><img src="img/reno-regency-5.jpg" alt="Studio apartment" title="Studio apartment"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-6.jpg"><img src="img/reno-regency-6.jpg" alt=""></a>
+                <a href="img/reno-regency-6.jpg"><img src="img/reno-regency-6.jpg" alt="Kitchenette" title="Kitchenette"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-7.jpg"><img src="img/reno-regency-7.jpg" alt=""></a>
+                <a href="img/reno-regency-7.jpg"><img src="img/reno-regency-7.jpg" alt="Full kitchen" title="Full kitchen"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-8.jpg"><img src="img/reno-regency-8.jpg" alt=""></a>
+                <a href="img/reno-regency-8.jpg"><img src="img/reno-regency-8.jpg" alt="Full kitchen" title="Full kitchen"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-9.jpg"><img src="img/reno-regency-9.jpg" alt=""></a>
+                <a href="img/reno-regency-9.jpg"><img src="img/reno-regency-9.jpg" alt="Gym" title="Gym"></a>
             </figure>
             <figure class="slide">
-                <a href="img/reno-regency-10.jpg"><img src="img/reno-regency-10.jpg" alt=""></a>
+                <a href="img/reno-regency-10.jpg"><img src="img/reno-regency-10.jpg" alt="Lobby" title="Lobby"></a>
             </figure>
         </div>
     </section>
@@ -158,17 +157,18 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
 
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
-                    <a href="#">Get directions +</a>
+                    9312 South Civic Center Drive <br>
+                    Suite 105 <br>
+                    Beverly Hills, California 90210<br>
+                    <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                    madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -184,7 +184,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
