--- a/404.html
+++ b/404.html
@@ -2,8 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Page Not Found</title>
+    <title>Page Not Found | Madison Real Estate Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Font selection from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700|Work+Sans:400,600" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
     <style>
 
         * {
@@ -55,6 +61,7 @@
 <body>
     <h1>Page Not Found</h1>
     <p>Sorry, but the page you were trying to view does not exist.</p>
+    <a style="color: #3498db" href="index.html">Go back home</a>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
