--- a/east-6th.html
+++ b/east-6th.html
@@ -43,7 +43,6 @@
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
-                        <li><a href="lake-street.html">Lake Street</a></li>
                         <li><a href="peckham-square.html">Peckham Square</a></li>
                         <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                         <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -89,7 +88,7 @@
 
         <div class="properties-slider">
             <figure class="slide">
-                <a href="img/east-6th-1.jpg"><img src="img/east-6th-1.jpg" alt="128 East 6th Street - front view of house"></a>
+                <a href="img/east-6th-1.jpg"><img src="img/east-6th-1.jpg" alt="Street level view of East 6th Street home" title="Street level view of East 6th Street home"></a>
             </figure>
         </div>
     </section>
@@ -123,25 +122,23 @@
                 <h3>Bathrooms</h3>
                 <p>2 full baths</p>
             </div>
-
-
         </div>
     </section>
 </main>
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
 
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
+                    9312 South Civic Center Drive <br>
+                    Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                    madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -157,7 +154,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
