--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
                             <ul class="sub-menu">
                                 <li><a href="biomat.html">Evans Square Biomat</a></li>
                                 <li><a href="east-6th.html">East 6th Street</a></li>
-                                <li><a href="lake-street.html">Lake Street</a></li>
                                 <li><a href="peckham-square.html">Peckham Square</a></li>
                                 <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                                 <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -90,33 +89,21 @@
                                 <h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>
                                 <div class="button-wrapper">
                                     <button onclick="window.location.href='about.html'" class="button button-reverse button-arrow">
-                                        <span>Learn More<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
+                                        <span>Learn more<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
                                     </button>
                                 </div>
                             </div>
                         </div>
                     </div> <!-- end slide-one -->
-                    <!--<div class="slide slide-two">-->
-                        <!--<div class="container slide-container">-->
-                            <!--<div class="slide-text">-->
-                                <!--<h1>Madison Real Estate Inc.</h1>-->
-                                <!--<h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>-->
-                                <!--<div class="button-wrapper">-->
-                                    <!--<button onclick="window.location.href='contact.html'" class="button button-reverse button-arrow">-->
-                                        <!--<span>Work with us<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>-->
-                                    <!--</button>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div> &lt;!&ndash; end slide-two &ndash;&gt;-->
+           
                     <div class="slide slide-three">
                         <div class="container slide-container">
                             <div class="slide-text">
                                 <h1>Madison Real Estate Inc.</h1>
                                 <h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>
                                 <div class="button-wrapper">
-                                    <button onclick="window.location.href='contact.html'" class="button button-reverse button-arrow">
-                                        <span>Work with us<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
+                                    <button onclick="window.location.href='about.html'" class="button button-reverse button-arrow">
+                                        <span>Learn more<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
                                     </button>
                                 </div>
                             </div>
@@ -128,8 +115,8 @@
                                 <h1>Madison Real Estate Inc.</h1>
                                 <h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>
                                 <div class="button-wrapper">
-                                    <button onclick="window.location.href='contact.html'" class="button button-reverse button-arrow">
-                                        <span>Work with us<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
+                                    <button onclick="window.location.href='about.html'" class="button button-reverse button-arrow">
+                                        <span>Learn more<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
                                     </button>
                                 </div>
                             </div>
@@ -141,8 +128,8 @@
                                 <h1>Madison Real Estate Inc.</h1>
                                 <h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>
                                 <div class="button-wrapper">
-                                    <button onclick="window.location.href='contact.html'" class="button button-reverse button-arrow">
-                                        <span>Work with us<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
+                                    <button onclick="window.location.href='about.html'" class="button button-reverse button-arrow">
+                                        <span>Learn more<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
                                     </button>
                                 </div>
                             </div>
