--- a/sunset-fuller.html
+++ b/sunset-fuller.html
@@ -43,7 +43,6 @@
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
-                        <li><a href="lake-street.html">Lake Street</a></li>
                         <li><a href="peckham-square.html">Peckham Square</a></li>
                         <li><a href="pleasant-valley.html">Pleasant Valley</a></li>
                         <li><a href="reno-regency.html">Reno Regency</a></li>
@@ -89,13 +88,13 @@
         <div class="properties-slider">
 
             <figure class="slide">
-                <a href="img/sunset-fuller-2.jpg"><img src="img/sunset-fuller-2.jpg" alt=""></a>
+                <a href="img/sunset-fuller-2.jpg"><img src="img/sunset-fuller-2.jpg" alt="Street level view of the Sunset Fuller Plaza" title="Street level view of the Sunset Fuller Plaza"></a>
             </figure>
             <figure class="slide">
-                <a href="img/sunset-fuller-1.jpg"><img src="img/sunset-fuller-1.jpg" alt=""></a>
+                <a href="img/sunset-fuller-1.jpg"><img src="img/sunset-fuller-1.jpg" alt="Wide view of the Sunset Fuller Plaza" title="Wide view of the Sunset Fuller Plaza"></a>
             </figure>
             <figure class="slide">
-                <a href="img/sunset-fuller-3.jpg"><img src="img/sunset-fuller-3.jpg" alt=""></a>
+                <a href="img/sunset-fuller-3.jpg"><img src="img/sunset-fuller-3.jpg" alt="Sunset Fuller signs" title="Sunset Fuller signs"></a>
             </figure>
             <div class="slide">
                 <!--<a href="img/sunset-fuller-4.jpg"><img src="img/sunset-fuller-4.jpg" alt=""></a>-->
@@ -130,17 +129,18 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-sm-8">
+            <div class="col-md-5 col-lg-4 col-sm-8">
 
                 <p>Madison Real Estate Inc.<br><br>
-                    123 South Civic Center Drive <br>
-                    Beverly Hills, California 90212<br>
+                    9312 South Civic Center Drive <br>
+                    Suite 105 <br>
+                    Beverly Hills, California 90210<br>
                     <a href="https://www.google.com/maps/dir//9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210/@34.0757078,-118.3988795,17z/data=!4m16!1m7!3m6!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2s9312+Civic+Center+Dr,+Beverly+Hills,+CA+90210!3b1!8m2!3d34.0757078!4d-118.3966908!4m7!1m0!1m5!1m1!1s0x80c2bc03d7f964df:0x5c137fbeca592c73!2m2!1d-118.3966908!2d34.0757078" target="_blank">Get directions +</a>
                 </p>
             </div>
             <div class="col-md-8">
-                <p>123.456.7891 <br>
-                    email@madison.com
+                <p>310.499.2777 <br>
+                    madisonrealestate@outlook.com
                 </p>
             </div>
             <div class="footer-links display-none">
@@ -156,7 +156,7 @@
             <p><a class="decoration-none" href="#">Back to top</a></p>
         </div>
         <div class="right-reserved">
-            <p>Copyright Madison Real Estate Inc. All rights reserved.</p>
+            <p>© Copyright Madison Real Estate Inc. All rights reserved.</p>
         </div>
     </div>
 </footer>
