--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
                 <li><a class="fade" href="contact.html">Contact</a></li>
             </ul>
 
-            <a class="site-title" href="index.html"><img class="logo-svg" src="img/logo.svg" alt="Madison Real Estate Inc.'s logo"></a>
+            <a class="site-title" href="index.html">
+                <div><img class="logo-svg" src="img/logo.svg" alt="Madison Real Estate Inc.'s logo"></div>
+            </a>
 
             <div class="btn-menu burger-trigger">
                 <div class="hamburger">
